Regression(r191652): Colloquy doesn’t render any chat content https://bugs.webkit.org/show_bug.cgi?id=150861 <rdar://problem/23381007>

Reviewed by Antti Koivisto.

Source/WebCore:

Do a partial revert of r191652 as this web-exposed behavior change
broke Colloquy app. This only reverts the code change, the tests
are left as is so that they don't rely of the frame ID setting the
Window name.

* html/HTMLFrameElementBase.cpp:
(WebCore::HTMLFrameElementBase::parseAttribute):
(WebCore::HTMLFrameElementBase::setNameAndOpenURL):

LayoutTests:

Update / rebaseline a couple of tests as this patch restores the
pre-r191652 behavior.

* fast/dom/Window/window-special-properties-expected.txt:
* fast/frames/iframe-no-name-expected.txt:
* fast/frames/iframe-no-name.html:


Canonical link: https://commits.webkit.org/169099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192016 268f45cc-cd09-0410-ab3c-d52691b4dbfc